--- a/Index2.html
+++ b/Index2.html
@@ -11,7 +11,22 @@
 
 <body>
 <!--This is a comment. It won't show up in your browser, only in the page source-->
+  <h1>My website content will go here</h1>
 	<p> your content here</p>
+  <p> More stuff goes here</p>
+  <p> A joke will go here</p>
+
+  <ul>
+    <li><a href="http://www.apple.com">A link to Apples's website</a></li>
+    <li><a href="http://www.google.com">A link to Google's website</a></li>
+    <li>  <a href="Index3.html">A link to second page of my website</a></li>
+    <li>Narwhal</li>
+  </ul>
+
+  <p>Showing the class <a href="http://www.apple.com">A link to Apples's website</a> so they can practice.</p>
+
+  <img src="profile.jpg" alt="A picture of me, Jennifer Litherland" />
+
 </body>
 
 </html>
