Made all the stuff I need for the assignment

--- a/Index2.html
+++ b/Index2.html
@@ -25,8 +25,9 @@
 
   <p>Showing the class <a href="http://www.apple.com">A link to Apples's website</a> so they can practice.</p>
 
-  <img src="profile.jpg" alt="A picture of me, Jennifer Litherland" />
-
+  <a href="mailto:jblmv7@mail.missouri.edu">
+    <img src="profile.jpg" alt="A picture of me, Jennifer Litherland" title="Jennifer Litherland" width="100px"  />
+  <a/>
 </body>
 
 </html>
