--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,34 @@
-<html>
-  <head>
-      <title>Title of website.</title>
-  </head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-  <body>
-      <h1> Hello, world!</h1>
-      <p>Here's where my website journey begins!</p>
-      <P>           ~Jennifer Litherland</p>
-  </body>
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+	<title>	Your page title goes here </title>
+	<meta http-equiv="content-type"
+		content="text/html;charset=utf-8" />
+</head>
+
+<body>
+<!--This is a comment. It won't show up in your browser, only in the page source-->
+  <h1>My website content will go here</h1>
+	<p> your content here</p>
+  <p> More stuff goes here</p>
+  <p> A joke will go here</p>
+
+  <ul>
+    <li><a href="http://www.apple.com">A link to Apples's website</a></li>
+    <li><a href="http://www.google.com">A link to Google's website</a></li>
+    <li>  <a href="Index3.html">A link to second page of my website</a></li>
+    <li>Narwhal</li>
+  </ul>
+
+  <p>Showing the class <a href="http://www.apple.com">A link to Apples's website</a> so they can practice.</p>
+
+  <a href="mailto:jblmv7@mail.missouri.edu">
+    <img src="profile.jpg" alt="A picture of me, Jennifer Litherland" title="Jennifer Litherland" width="100px"  />
+  </a>
+
+</body>
 
 </html>
