Tring to get this to work

--- a/Index.html
+++ b/Index.html
@@ -20,6 +20,7 @@
     <li><a href="http://www.apple.com">A link to Apples's website</a></li>
     <li><a href="http://www.google.com">A link to Google's website</a></li>
     <li>  <a href="Index3.html">A link to second page of my website</a></li>
+    <li>Test</li>
   </ul>
 
   <p>Showing the class <a href="http://www.apple.com">A link to Apples's website</a> so they can practice.</p>
