--- a/Index.html
+++ b/Index.html
@@ -4,29 +4,35 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-	<title>	Your page title goes here </title>
+	<title>	Jennifer Litherland </title>
 	<meta http-equiv="content-type"
 		content="text/html;charset=utf-8" />
 </head>
 
 <body>
 <!--This is a comment. It won't show up in your browser, only in the page source-->
-  <h1>My website content will go here</h1>
-	<p> your content here</p>
-  <p> More stuff goes here</p>
-  <p> A joke will go here</p>
-
+  <h1>Jennifer Litherland</h1>
+	<p> Contact me:</p>
   <ul>
-    <li><a href="http://www.apple.com">A link to Apples's website</a></li>
-    <li><a href="http://www.google.com">A link to Google's website</a></li>
-    <li>  <a href="Index3.html">A link to second page of my website</a></li>
-    <li>Test</li>
+    <li>Email: jblmv7@mail.missouri.edu</li>
+    <li>Twitter: Jennifer Litherland @JenniLitherland</li>
+  </ul>
+  <h2>Links to my work:</h2>
+  <ul>
+    <li><a href="https://jenniferlitherlandblog.wordpress.com/">A link to my journalism and art blog.</a></li>
+    <li><a href="http://hjlin8.wixsite.com/group10culturejam">A link to a culture jam group project I worked on.</a></li>
+    <li><a href="https://www.columbiamissourian.com/users/profile/jblmv7/">A link to my work for the Missourian.</a></li>
   </ul>
 
-  <p>Showing the class <a href="http://www.apple.com">A link to Apples's website</a> so they can practice.</p>
+  <h2>Joke of the day:</h2>
+  <p>Three older men sit on a bench while waiting on their wives to finish up the shopping. The first man says “Gee, It’s windy!” as his hat started to flutter off his head. The second guy replied, “No, I think it’s Thursday today,” which caused the third and final man to shout, “I’m thirsty too, let’s go get a drink!” </p>
+
+
+    <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A link to a favorite song of mine.</a></p>
+    <p><a href="Index3.html">A link to second page of my website</a></p>
 
   <a href="mailto:jblmv7@mail.missouri.edu">
-    <img src="profile.jpg" alt="A picture of me, Jennifer Litherland" title="Jennifer Litherland" width="100px"  />
+    <img src="profile.jpg" alt="A picture of me, Jennifer Litherland" title="Jennifer Litherland" width="200px"  />
   </a>
 
 </body>
