--- a/Index3.html
+++ b/Index3.html
@@ -4,14 +4,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-	<title>	Your page title goes here </title>
+	<title>	Second page </title>
 	<meta http-equiv="content-type"
 		content="text/html;charset=utf-8" />
 </head>
 
 <body>
 <!--This is a comment. It won't show up in your browser, only in the page source-->
-	<p> your content here</p>
+	<p> Congrats! You have reached the second page of my website!</p>
 </body>
 
 </html>
