Adding photo caption

--- a/Index.html
+++ b/Index.html
@@ -35,6 +35,8 @@
     <img src="profile.jpg" alt="A picture of me, Jennifer Litherland" title="Jennifer Litherland" width="200px"  />
   </a>
 
+    <p>It's me, Jennifer Litherland.</p>
+
 </body>
 
 </html>
