--- a/Index3.html
+++ b/Index3.html
@@ -7,7 +7,15 @@
 	<title>	Second page </title>
 	<meta http-equiv="content-type"
 		content="text/html;charset=utf-8" />
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
+<ul id="nav">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="Index3.html">Second page</a></li>
+    <li><a href="oldindex.html">Unstyled site</a></li>
+    <li><a href="about.html">About</a></li>
+</ul>
 
 <body>
 <!--This is a comment. It won't show up in your browser, only in the page source-->
