--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <ul id="nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="Index3.html">Second page</a></li>
-        <li><a href="#">Things</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="oldindex.html">Unstyled site</a></li>
+        <li><a href="about.html">About</a></li>
     </ul>
 
   <h1>Jennifer Litherland</h1>
