--- a/Index3.html
+++ b/Index3.html
@@ -7,9 +7,9 @@
 	<title>	Second page </title>
 	<meta http-equiv="content-type"
 		content="text/html;charset=utf-8" />
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
-
+<body>
 <ul id="nav">
     <li><a href="index.html">Home</a></li>
     <li><a href="Index3.html">Second page</a></li>
@@ -17,7 +17,6 @@
     <li><a href="about.html">About</a></li>
 </ul>
 
-<body>
 <!--This is a comment. It won't show up in your browser, only in the page source-->
 	<p> Congrats! You have reached the second page of my website!</p>
 </body>
