--- a/about.html
+++ b/about.html
@@ -1,9 +1,15 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
 	<title>	About </title>
 	<meta http-equiv="content-type"
 		content="text/html;charset=utf-8" />
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
+<body>
 <ul id="nav">
     <li><a href="index.html">Home</a></li>
     <li><a href="Index3.html">Second page</a></li>
@@ -14,3 +20,5 @@
   <img src="profile.jpg" alt="A picture of me, Jennifer Litherland" title="Jennifer Litherland" width="200px"  />
 </a>
   <p class="caption">It's me, Jennifer Litherland.</p>
+</body>
+</html>
