--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 	<title>	Jennifer Litherland </title>
 	<meta http-equiv="content-type"
 		content="text/html;charset=utf-8" />
-    <link rel="stylesheet" type="text/css" href="style.css">
-
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 
 <body>
