Updating styled website with type and color

--- a/oldindex2.html
+++ b/oldindex2.html
@@ -7,8 +7,7 @@
 	<title>	Jennifer Litherland </title>
 	<meta http-equiv="content-type"
 		content="text/html;charset=utf-8" />
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600|Roboto:400,400i,700|Suez+One" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="oldstyle.css"/>
 </head>
 
 <body>
@@ -16,20 +15,19 @@
 <div id="container">
     <ul id="nav">
         <li><a href="index.html">Home</a></li>
-        <li><a href="Index3.html">Second Page</a></li>
-        <li><a href="oldindex.html">Unstyled Site</a></li>
-        <li><a href="oldindex2.html">Old Styled Site</a></li>
+        <li><a href="Index3.html">Second page</a></li>
+        <li><a href="oldindex.html">Unstyled site</a></li>
         <li><a href="about.html">About</a></li>
     </ul>
 
   <h1>Jennifer Litherland</h1>
 	<p> Contact me:</p>
-  <ul id="nav2">
+  <ul>
     <li>Email: jblmv7@mail.missouri.edu</li>
     <li>Twitter: Jennifer Litherland @JenniLitherland</li>
   </ul>
   <h2>Links to my work:</h2>
-  <ul id="nav2">
+  <ul>
     <li><a href="https://jenniferlitherlandblog.wordpress.com/">A link to my journalism and art blog.</a></li>
     <li><a href="http://hjlin8.wixsite.com/group10culturejam">A link to a culture jam group project I worked on.</a></li>
     <li><a href="https://www.columbiamissourian.com/users/profile/jblmv7/">A link to my work for the Missourian.</a></li>
