--- a/Index3.html
+++ b/Index3.html
@@ -10,12 +10,13 @@
     <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
-<ul id="nav">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="Index3.html">Second page</a></li>
-    <li><a href="oldindex.html">Unstyled site</a></li>
-    <li><a href="about.html">About</a></li>
-</ul>
+  <ul id="nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="Index3.html">Second Page</a></li>
+      <li><a href="oldindex.html">Unstyled Site</a></li>
+      <li><a href="oldindex2.html">Old Styled Site</a></li>
+      <li><a href="about.html">About</a></li>
+  </ul>
 
 <!--This is a comment. It won't show up in your browser, only in the page source-->
 	<p> Congrats! You have reached the second page of my website!</p>
