--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
   <h2>Joke of the day:</h2>
   <p>Three older men sit on a bench while waiting on their wives to finish up the shopping. The first man says “Gee, It’s windy!” as his hat started to flutter off his head. The second guy replied, “No, I think it’s Thursday today,” which caused the third and final man to shout, “I’m thirsty too, let’s go get a drink!” </p>
 
-
-    <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A link to a favorite song of mine.</a></p>
-    <p><a href="Index3.html">A link to second page of my website</a></p>
+  <ul id="nav2">
+    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A link to a favorite song of mine.</a></p>
+    <li><a href="Index3.html">A link to second page of my website</a></p>
+  </ul>
 
   <a href="mailto:jblmv7@mail.missouri.edu">
     <img src="profile.jpg" alt="A picture of me, Jennifer Litherland" title="Jennifer Litherland" width="200px"  />
