--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>	Jennifer Litherland </title>
 	<meta http-equiv="content-type"
 		content="text/html;charset=utf-8" />
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600|Roboto:400,400i,700|Suez+One" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600|Roboto:400,400i,700|Suez+One" rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 
@@ -39,8 +39,8 @@
   <p>Three older men sit on a bench while waiting on their wives to finish up the shopping. The first man says “Gee, It’s windy!” as his hat started to flutter off his head. The second guy replied, “No, I think it’s Thursday today,” which caused the third and final man to shout, “I’m thirsty too, let’s go get a drink!” </p>
 
   <ul id="nav2">
-    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A link to a favorite song of mine.</a></p>
-    <li><a href="Index3.html">A link to second page of my website</a></p>
+    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A link to a favorite song of mine.</a></li>
+    <li><a href="Index3.html">A link to second page of my website</a></li>
   </ul>
 
   <a href="mailto:jblmv7@mail.missouri.edu">
