--- a/html5/index.html
+++ b/html5/index.html
@@ -17,6 +17,18 @@
 
 <body>
 
+  <h1> Here's my cool video example </h1>
+    <video width="568" height="320" control poster= "images/placeholder.jpg">
+    <source src= "movies/chester.mov" types="video/mp4"/>
+  </video>
+
+    <h1> Here's my cool audio example </h1>
+    <audio src="audio/backward.mp3" type: "audio/mp3" controls>
+    </audio>
+
+  <h1> Here's my cool canvas example </h1>
+  <canvas id="a" width="300px" height="200px" onclick= "draw_canvas();">
+
 <img src="images/cat.jpg" alt="A cat picture" width="500px" />
 
 </body>
