--- a/w8-embedding_browser_testing/embedding_social/index.html
+++ b/w8-embedding_browser_testing/embedding_social/index.html
@@ -23,11 +23,16 @@
     <h1>Headline goes here</h1>
 
 	<p>What do you want? Well, it's Princess Leia, sir. She's been trying to get you on the communicator. I turned it off. I don't want to talk to her. Oh. Well, Princess Leia is wondering about Master Luke. He hasn't come back yet. She doesn't know where he is. I don't know where he is. Nobody knows where he is. What do you mean, nobody knows? Well, uh, you see... Deck Officer. Deck Officer!</p>
+	<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Covering my last game with the Columbia Missourian! Tolton vs. Summit <a href="https://t.co/PftWCYbIK2">pic.twitter.com/PftWCYbIK2</a></p>&mdash; Jennifer Litherland (@JenniLitherland) <a href="https://twitter.com/JenniLitherland/status/807407430837514240">December 10, 2016</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+<a class="twitter-timeline" data-height="264" data-theme="dark" data-link-color="#E81C4F" href="https://twitter.com/TwitterDev">Tweets by TwitterDev</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     <p>Put Captain Solo in the cargo hold. Artoo! Artoo! Where have you been? Turn around, you wooly...! Hurry, hurry! We're trying to save Han from the bounty hunter! Well, at least your still in one piece! Look what happened to me! Oh, no! Chewie, they're behind you!</p>
 
     <p>Well done. Hold them in the security tower - and keep it quiet. Move. What do you think you're doing? We're getting out of here. I knew all along it had to be a mistake. Do you think that after what you did to Han we're going to trust you? I had no choice... What are you doing? Trust him, trust him! Oh, so we understand, don't we, Chewie? He had no choice. I'm just trying to help... We don't need any of your help. H-a-a-a... What? It sounds like Han. There's still a chance to save Han...I mean, at the East Platform... Chewie. I'm terribly sorry about all this. After all, he's only a Wookiee.</p>
-
+		<div class = "videoWrapper">
+			<iframe width= "12800" height= "720" src="https://www.youtube.com/embed/sC9abcLLQpI?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
+		</div>
     <p>So was I, if you'll remember. He is too old. Yes, too old to begin the training. But I've learned so much. Will he finished what he begins? I won't fail you - I'm not afraid. Oh, you will be. You will be.</p>
 
     <p>You are beaten. It is useless to resist. Don't let yourself be destroyed as Obi-Wan did. There is no escape. Don't make me destroy you. You do not yet realize your importance. You have only begun to discover you power. Join me and I will complete your training. With our combined strength, we can end this destructive conflict and bring order to the galaxy. I'll never join you! If you only knew the power of the dark side. Obi-Wan never told you what happened to your father. He told me enough! He told me you killed him. No. I am your father. No. No. That's not true! That's impossible! Search your feelings. You know it to be true. No! No! No! Luke. You can destroy the Emperor. He has foreseen this. It is your destiny. Join me, and we can rule the galaxy as father and son. Come with me. It's the only way.</p>
