--- a/index.html
+++ b/index.html
@@ -1,56 +1,64 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
-
+<html>
 <head>
-	<title>	Jennifer Litherland </title>
-	<meta http-equiv="content-type"
-		content="text/html;charset=utf-8" />
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600|Roboto:400,400i,700|Suez+One" rel="stylesheet"/>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+	<title>Jennifer Litherland</title>
+	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600|Roboto:400,400i,700|Suez+One" rel="stylesheet">
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<!--This is a comment. It won't show up in your browser, only in the page source-->
-<div id="container">
-    <ul id="nav">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="Index3.html">Second Page</a></li>
-        <li><a href="oldindex.html">Unstyled Site</a></li>
-        <li><a href="oldindex2.html">Old Styled Site</a></li>
-        <li><a href="about.html">About</a></li>
+  <nav>
+    <ul class="navigation">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="Index3.html">Second Page</a></li>
+      <li><a href="oldindex.html">Unstyled Site</a></li>
+      <li><a href="indexoldb.html">Old Styled Site</a></li>
+      <li><a href="about.html">About</a></li>
     </ul>
+  </nav>
+  <div class="wrapper">
+  <header>
+	  <h1>Jennifer Litherland</h1>
+  </header>
+    <article>
+		<div class="image">
+      <a href="mailto:jblmv7@mail.missouri.edu">
+			     <img src="profile.jpg" alt="A picture of me, Jennifer Litherland"/>
+      </a>
+      <p class="caption">It's me, Jennifer Litherland.</p>
+		</div>
+		<div class="story">
+			<h2 class="first">Contact me:</h2>
+      <ul id="nav2">
+        <li>Email: jblmv7@mail.missouri.edu</li>
+        <li>Twitter: Jennifer Litherland @JenniLitherland</li>
+      </ul>
+      <h2>Links to my work:</h2>
+      <ul>
+        <li><a href="https://jenniferlitherlandblog.wordpress.com/">A link to my journalism and art blog.</a></li>
+        <li><a href="http://hjlin8.wixsite.com/group10culturejam">A link to a culture jam group project I worked on.</a></li>
+        <li><a href="https://www.columbiamissourian.com/users/profile/jblmv7/">A link to my work for the Missourian.</a></li>
+      </ul>
+		</div>
+    </article>
 
-  <h1>Jennifer Litherland</h1>
-	<p> Contact me:</p>
-  <ul id="nav2">
-    <li>Email: jblmv7@mail.missouri.edu</li>
-    <li>Twitter: Jennifer Litherland @JenniLitherland</li>
-  </ul>
-  <h2>Links to my work:</h2>
-  <ul id="nav3">
-    <li><a href="https://jenniferlitherlandblog.wordpress.com/">A link to my journalism and art blog.</a></li>
-    <li><a href="http://hjlin8.wixsite.com/group10culturejam">A link to a culture jam group project I worked on.</a></li>
-    <li><a href="https://www.columbiamissourian.com/users/profile/jblmv7/">A link to my work for the Missourian.</a></li>
-  </ul>
-
-  <h2>Joke of the day:</h2>
-  <p>Three older men sit on a bench while waiting on their wives to finish up the shopping. The first man says “Gee, It’s windy!” as his hat started to flutter off his head. The second guy replied, “No, I think it’s Thursday today,” which caused the third and final man to shout, “I’m thirsty too, let’s go get a drink!” </p>
-
-  <ul id="nav4">
-    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A link to a favorite song of mine.</a></li>
-    <li><a href="Index3.html">A link to second page of my website</a></li>
-  </ul>
-
-  <a href="mailto:jblmv7@mail.missouri.edu">
-    <img src="profile.jpg" alt="A picture of me, Jennifer Litherland" title="Jennifer Litherland" width="200px"  />
-  </a>
-    <p class="caption">It's me, Jennifer Litherland.</p>
-
-    <p id="footer">Content copyright &copy; 2017 Jennifer Litherland.</p>
-    <!-- end container div -->
-      </div>
+    <aside class="aside-1">
+		  <h2>Joke of the day:</h2>
+      <p>Three older men sit on a bench while waiting on their wives to finish up the shopping. </p>
+      <p> The first man says “Gee, It’s windy!” as his hat started to flutter off his head.</p>
+      <p>The second guy replied, “No, I think it’s Thursday today.”</p>
+      <p> Which caused the third and final man to shout, “I’m thirsty too, let’s go get a drink!”</p>
+      <ul>
+        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A link to a favorite song of mine.</a></li>
+        <li><a href="Index3.html">A link to second page of my website</a></li>
+      </ul>
+	</aside>
+    <footer>
+		<p id="footer">Content copyright &copy; 2017 Jennifer Litherland.</p>
+	</footer>
+  </div>
 </body>
-
 </html>
