--- a/index.html
+++ b/index.html
@@ -1,64 +1,72 @@
-<!DOCTYPE html>
 
+<!doctype html>
 <html>
 <head>
-	<title>Jennifer Litherland</title>
-	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600|Roboto:400,400i,700|Suez+One" rel="stylesheet">
-	<link rel="stylesheet" href="style.css">
+  <title>Jennifer Litherland</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
-  <nav>
-    <ul class="navigation">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="Index3.html">Second Page</a></li>
-      <li><a href="oldindex.html">Unstyled Site</a></li>
-      <li><a href="indexoldb.html">Old Styled Site</a></li>
-      <li><a href="about.html">About</a></li>
-    </ul>
-  </nav>
-  <div class="wrapper">
-  <header>
-	  <h1>Jennifer Litherland</h1>
-  </header>
-    <article>
-		<div class="image">
-      <a href="mailto:jblmv7@mail.missouri.edu">
-			     <img src="profile.jpg" alt="A picture of me, Jennifer Litherland"/>
-      </a>
-      <p class="caption">It's me, Jennifer Litherland.</p>
-		</div>
-		<div class="story">
-			<h2 class="first">Contact me:</h2>
-      <ul id="nav2">
-        <li>Email: jblmv7@mail.missouri.edu</li>
-        <li>Twitter: Jennifer Litherland @JenniLitherland</li>
-      </ul>
-      <h2>Links to my work:</h2>
-      <ul>
-        <li><a href="https://jenniferlitherlandblog.wordpress.com/">A link to my journalism and art blog.</a></li>
-        <li><a href="http://hjlin8.wixsite.com/group10culturejam">A link to a culture jam group project I worked on.</a></li>
-        <li><a href="https://www.columbiamissourian.com/users/profile/jblmv7/">A link to my work for the Missourian.</a></li>
-      </ul>
-		</div>
-    </article>
 
-    <aside class="aside-1">
-		  <h2>Joke of the day:</h2>
-      <p>Three older men sit on a bench while waiting on their wives to finish up the shopping. </p>
-      <p> The first man says “Gee, It’s windy!” as his hat started to flutter off his head.</p>
-      <p>The second guy replied, “No, I think it’s Thursday today.”</p>
-      <p> Which caused the third and final man to shout, “I’m thirsty too, let’s go get a drink!”</p>
-      <ul>
-        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A link to a favorite song of mine.</a></li>
-        <li><a href="Index3.html">A link to second page of my website</a></li>
-      </ul>
-	</aside>
-    <footer>
-		<p id="footer">Content copyright &copy; 2017 Jennifer Litherland.</p>
-	</footer>
+  <div id="header">
+    <div class="inner">
+      <h2>Jennifer Litherland</h2>
+    </div>
   </div>
+  <div class="wrapper">
+    <div id="nav" class="side">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Index3.html">Second Page</a></li>
+        <li><a href="oldindex.html">Unstyled Site</a></li>
+        <li><a href="indexoldb.html">Old Styled Site</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </div>
+  <div id="pageBody">
+    <div id="content">
+      <div class="inner">
+
+				<h2>Joke of the day:</h2>
+				<p>Three older men sit on a bench while waiting on their wives to finish up the shopping. The first man says, "Gee, It's windy!" as his hat started to flutter off his head. The second guy replied, "No,I think it's Thursday today," which caused the third and final man to shout, "I'm thirsty too, let's go get a drink!" </p>
+        <div class="image">
+          <a href="mailto:jblmv7@mail.missouri.edu">
+    			     <img src="profile.jpg" width= "35%" alt="A picture of me, Jennifer Litherland"/>
+          </a>
+          <p class="caption">It's me, Jennifer Litherland.</p>
+    		</div>
+
+
+      </div>
+    </div>
+
+    <div id="sidebar" class="side">
+      <div class="inner">
+
+        <h2>Links to my work:</h2>
+        <ul>
+          <li><a href="https://jenniferlitherlandblog.wordpress.com/">A link to my journalism and art blog.</a></li>
+          <li><a href="http://hjlin8.wixsite.com/group10culturejam">A link to a culture jam group project I worked on.</a></li>
+          <li><a href="https://www.columbiamissourian.com/users/profile/jblmv7/">A link to my work for the Missourian.</a></li>
+        </ul>
+
+        <h2>Contact me:</h2>
+        <ul>
+          <li>Email: jblmv7@mail.missouri.edu</li>
+          <li>Twitter: Jennifer Litherland @JenniLitherland</li>
+        </ul>
+
+      </div>
+    </div>
+
+  </div>
+</div>
+
+  <div id="footer">
+    <div class="inner">
+      <p>Content copyright &copy; 2017 Jennifer Litherland.</p>
+    </div>
+  </div>
+
 </body>
 </html>
