--- a/oldindex2.html
+++ b/oldindex2.html
@@ -7,7 +7,7 @@
 	<title>	Jennifer Litherland </title>
 	<meta http-equiv="content-type"
 		content="text/html;charset=utf-8" />
-    <link rel="stylesheet" type="text/css" href="oldstyle.css"/>
+    <link rel="stylesheet" type="text/css" href="styleold2.css"/>
 </head>
 
 <body>
