--- a/indexoldc.html
+++ b/indexoldc.html
@@ -3,25 +3,26 @@
 <html>
 <head>
   <title>Jennifer Litherland</title>
-  <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css" />
-  <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-  <script src="menu.js" type="text/javascript"></script>
 </head>
 <body>
-  <header>
-    <h1>Jennifer Litherland</h1>
-<nav>
-    <a class="menu-trigger" href="#">&#9776;</a>
-  <ul>
+
+  <div id="header">
+    <div class="inner">
+      <h2>Jennifer Litherland</h2>
+    </div>
+  </div>
+  <div class="wrapper">
+    <div id="nav" class="side">
+      <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="Index3.html">Second Page</a></li>
         <li><a href="oldindex.html">Unstyled Site</a></li>
         <li><a href="indexoldb.html">Old Styled Site</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
-    </nav>
-    </header>
+    </div>
   <div id="pageBody">
     <div id="content">
       <div class="inner">
