--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
       <div class="inner">
 
         <h2>Links to my work:</h2>
-        <ul>
-          <li><a href="https://jenniferlitherlandblog.wordpress.com/">A link to my journalism and art blog.</a></li>
-          <li><a href="http://hjlin8.wixsite.com/group10culturejam">A link to a culture jam group project I worked on.</a></li>
-          <li><a href="https://www.columbiamissourian.com/users/profile/jblmv7/">A link to my work for the Missourian.</a></li>
+        <ul id="links">
+          <li><a href="https://jenniferlitherlandblog.wordpress.com/">My journalism and art blog.</a></li>
+          <li><a href="http://hjlin8.wixsite.com/group10culturejam">Culture jam group project I worked on.</a></li>
+          <li><a href="https://www.columbiamissourian.com/users/profile/jblmv7/">My work for the Missourian.</a></li>
         </ul>
 
         <h2>Contact me:</h2>
