--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <title>Jennifer Litherland</title>
-  <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css" />
   <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
   <script src="menu.js" type="text/javascript"></script>
