--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 
     <div id="sidebar" class="side">
       <div class="inner">
-
         <h2>Links to my work:</h2>
         <ul id="links">
           <li><a href="https://jenniferlitherlandblog.wordpress.com/">My journalism and art blog.</a></li>
@@ -60,6 +59,20 @@
 
   </div>
 </div>
+
+<div id="sidebar" class="side">
+  <div class="inner">
+    <h2>Columbia Missourian</h2>
+    <div class="map-wrapper"
+        <h3>Columbia Missourian</h3>
+        <iframe frameborder="0" width="600" height="450" style="border: 0" src="https://maps.google.com/maps?layer=c&panoid=F:-xVuL2ibcrWI/WQDS0RmWGTI/AAAAAAAAAOY/GmvkuOnsHAMF4H35YbOMzpgHhr4UZsGagCLIB&ie=UTF8&source=embed&output=svembed&cbp=13%2C304%2C%2C0.98%2C-2.4" allowfullscreen=true></iframe>
+  </div>
+  </div>
+</div>
+
+</div>
+</div>
+
 
   <div id="footer">
     <div class="inner">
